k8s/shadow/deployment-primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-app-primary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-app-shadow
      track: primary
      strategy: shadow
  template:
    metadata:
      labels:
        app: aceest-app-shadow
        track: primary
        strategy: shadow
    spec:
      containers:
        - name: aceest-app
          image: aceest-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
