k8s/shadow/deployment-shadow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-app-shadow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aceest-app-shadow
      track: shadow
      strategy: shadow
  template:
    metadata:
      labels:
        app: aceest-app-shadow
        track: shadow
        strategy: shadow
    spec:
      containers:
        - name: aceest-app
          image: aceest-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
