k8s/shadow/service-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-app-primary
spec:
  selector:
    app: aceest-app-shadow
    track: primary
  ports:
    - name: http
      port: 80
      targetPort: 5000
