k8s/shadow/service-shadow.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-app-shadow
spec:
  selector:
    app: aceest-app-shadow
    track: shadow
  ports:
    - name: http
      port: 80
      targetPort: 5000
