k8s/shadow/ingress-mirror.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-app-shadow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/mirror-target: http://aceest-app-shadow
spec:
  ingressClassName: nginx
  rules:
    - host: aceest-shadow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-app-primary
                port:
                  number: 80
